test/libsolidity/syntaxTests/dataLocations/libraryInternalFunction/function_argument_location_specifier_test_internal_calldata.sol
library test {
    function f(bytes calldata) internal pure {}
}
// ----
// TypeError: (30-35): Location has to be memory or storage for reference type parameter.
